# shared-game-agent

./: .gitignore  GAME.md  README.md  pyproject.toml
config/: models.json
content/: email_sequence.json
deploy/: shared-game-witness.service  shared-game-witness.timer
docs/: data-boundary.json  marvin-witness-flow.md
scripts/: witness_worker.py
src/shared_game/: __init__.py  api.py  cli.py  llm.py  model_registry.py  models.py  scheduler.py  store.py  witness.py  witness_flow.py  witness_store.py
tests/: test_shared_game.py
