[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-game-agent"
version = "0.1.0"
description = "A reality-anchored seven-day shared game with an OpenRouter-powered guide."
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0", "fastapi>=0.110.0", "uvicorn>=0.27.0"]

[project.scripts]
shared-game = "shared_game.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
